# SlangSpirVCompilerHelper

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: SlangSpirVCompiler.cmake
examples/: compile_examples.sh
examples/shaders/: compute.slang  hlsl_compat_auto.slang  mixed_binding.slang  parameter_block.slang  pure_slang.slang  pure_slang_explicit.slang  triangle.slang  vertex.slang
src/: CMakeLists.txt
src/cli_tool/: CMakeLists.txt  ShaderReflection.cppm  main.cpp
